tests/lex/invalid/binary_literal_leading_underscore.zn
def f() {
    var x = 0b_01;
}
